<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/txt_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:text="@string/register_label"
        android:textColor="@color/purple_500"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/edt_n1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_ConfirmPassword"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_name"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_dob"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_gender"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_n7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_location"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:text="@string/register_label"
        android:textSize="25sp" />
    </LinearLayout>
</ScrollView>